force-app/main/default/objects/Quality_Assurance__c/Quality_Assurance__c.object-meta.xml
<CustomObject>
    <description>Quality Assurance Records</description>
    <label>Quality Assurance</label>
    <nameField>
        <displayFormat>QA-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Quality Assurance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>