force-app/main/default/objects/Quality_Assurance__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <label>Batch ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>