force-app/main/default/objects/Quality_Assurance__c/fields/Best_or_Use_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Best_or_Use_by_Date__c</fullName>
    <inlineHelpText>Optional: The product expiration date, “use by” date, or “best by” date</inlineHelpText>
    <label>Best or Use by Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>