force-app/main/default/objects/Quality_Assurance__c/fields/Cannabinoid_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Cannabinoid_Threshold__c</fullName>
    <inlineHelpText>Cannabinoid Content are accurate if and within + / - 10% threshold for each cannabinoid content. Less than two (2) milligrams per serving or per package, the cannabinoid content may be labeled as “&lt;2.0 mg per serving” or “&lt;2.0 mg per package.”</inlineHelpText>
    <label>Cannabinoid Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>