force-app/main/default/objects/Quality_Assurance__c/fields/Cannabis_Cannabinoid_Content__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Cannabinoid_Content__c</fullName>
    <inlineHelpText>Applies to cannabis (Flower or Prerolls) Cannabinoid content (expressed in percentage)</inlineHelpText>
    <label>Cannabis Cannabinoid Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>