force-app/main/default/objects/Quality_Assurance__c/fields/Cannabis_Government_Warning__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Government_Warning__c</fullName>
    <inlineHelpText>Government Warning for Cannabis (Flower and Prerolls) Must be bold and in capital letters</inlineHelpText>
    <label>Cannabis Government Warning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>