force-app/main/default/objects/Quality_Assurance__c/fields/Cannabis_Product_Cannabinoid_Content__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Product_Cannabinoid_Content__c</fullName>
    <inlineHelpText>Products with serving, cannabinoid content - in mg per serving and mg per package. Other Products without serving - cannabinoid content, in mg package. If less than 2.0 per serving, may be labeled as “2.0 mg per serving” or &quot;2.0 mg per package&quot;</inlineHelpText>
    <label>Cannabis Product Cannabinoid Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>