force-app/main/default/objects/Quality_Assurance__c/fields/Child_Resistant_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Child_Resistant_Packaging__c</fullName>
    <inlineHelpText>The package is designed to be difficult for children under five years of age to open. A bottle sealed with a pry-off metal crown bottle cap. Plastic packaging that is at least 4 mils.</inlineHelpText>
    <label>Child Resistant Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>