force-app/main/default/objects/Quality_Assurance__c/fields/Clear_and_Legible__c.field-meta.xml
<CustomField>
    <fullName>Clear_and_Legible__c</fullName>
    <label>Clear and Legible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>