force-app/main/default/objects/Quality_Assurance__c/fields/Failure_Summary__c.field-meta.xml
<CustomField>
    <fullName>Failure_Summary__c</fullName>
    <inlineHelpText>Failure Summary Notes for Corrective Action Request</inlineHelpText>
    <label>Failure Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>