force-app/main/default/objects/Quality_Assurance__c/fields/Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Date__c</fullName>
    <label>Harvest Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>