force-app/main/default/objects/Quality_Assurance__c/fields/Licensee_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Contact_Information__c</fullName>
    <inlineHelpText>Licensee name and phone number or website: The licensee name can be either the name of the licensed cultivator or licensee packaging the product and must be a name listed on the license certificate (either the legal business name or the registered DBA)</inlineHelpText>
    <label>Licensee Contact Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>