force-app/main/default/objects/Quality_Assurance__c/fields/Manufacture_and_Packaging_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_and_Packaging_Date__c</fullName>
    <label>Manufacture and Packaging Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>