force-app/main/default/objects/Quality_Assurance__c/fields/Multi_Layered_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Multi_Layered_Packaging__c</fullName>
    <inlineHelpText>Must include labeling on the inner container holding the cannabis product: Inhaled - the universal symbol. Non-inhaled include product identity, universal symbol and net weight or volume. Edible include “Cannabis-Infused&quot;</inlineHelpText>
    <label>Multi-Layered Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>