force-app/main/default/objects/Quality_Assurance__c/fields/Net_weight__c.field-meta.xml
<CustomField>
    <fullName>Net_weight__c</fullName>
    <inlineHelpText>Applies to All Products: List weight in both metric and U.S. customary units (Example: NET WT. 4.0 oz. (113.4 g))</inlineHelpText>
    <label>Net Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>