force-app/main/default/objects/Quality_Assurance__c/fields/Net_Weight_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_Threshold__c</fullName>
    <inlineHelpText>Net Weight is plus or minus 3% verified by using class II certified scales</inlineHelpText>
    <label>Net Weight Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>