force-app/main/default/objects/Quality_Assurance__c/fields/Opaque__c.field-meta.xml
<CustomField>
    <fullName>Opaque__c</fullName>
    <inlineHelpText>For edibles only - The package is not transparent; cannot see product through the packaging. Amber-colored bottles are considered opaque. Opaque bottles used for beverages may use a single, vertical, clear strip less than 0.25” wide to indicate servings.</inlineHelpText>
    <label>Opaque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>