force-app/main/default/objects/Quality_Assurance__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>Picklist_Line__r.Ownership__c &amp;  Production_Batch_Job__r.Ownership__c &amp;   Receiving_Line__r.Ownership__r.Name</formula>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>