force-app/main/default/objects/Quality_Assurance__c/fields/Packaging_Date__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Date__c</fullName>
    <inlineHelpText>Date of packaging for retail sale: Include month, day and year</inlineHelpText>
    <label>Packaging Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>