force-app/main/default/objects/Quality_Assurance__c/fields/Pass_All__c.field-meta.xml
<CustomField>
    <fullName>Pass_All__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to mass update all QA elements to pass.</inlineHelpText>
    <label>Pass All</label>
    <type>Checkbox</type>
</CustomField>