force-app/main/default/objects/Quality_Assurance__c/fields/Product_Identification__c.field-meta.xml
<CustomField>
    <fullName>Product_Identification__c</fullName>
    <inlineHelpText>A generic or common name that describes the item. Examples include flower or pre-roll.</inlineHelpText>
    <label>Product Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>