force-app/main/default/objects/Quality_Assurance__c/fields/Product_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Product_Ingredients__c</fullName>
    <inlineHelpText>In descending order of predominance by weight or volume;. If any product ingredient contains sub-ingredients, the list shall either, common name, a major food allergen, the word “contains,” followed by a list of the applicable major food allergens;</inlineHelpText>
    <label>Product Ingredients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>