force-app/main/default/objects/Quality_Assurance__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Picklist_Line__r.Product_Name__r.Name &amp; Receiving_Line__r.Product_Name__r.Name &amp;  Production_Batch_Job__r.New_Packaged_Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>