force-app/main/default/objects/Quality_Assurance__c/fields/Product_Verification__c.field-meta.xml
<CustomField>
    <fullName>Product_Verification__c</fullName>
    <inlineHelpText>Verify the Product matches the picklist</inlineHelpText>
    <label>Product Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>