force-app/main/default/objects/Quality_Assurance__c/fields/Production_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Production_Batch_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Batch Job</label>
    <referenceTo>Production_Batch_Jobs__c</referenceTo>
    <relationshipLabel>Quality Assurances</relationshipLabel>
    <relationshipName>Quality_Assurances</relationshipName>
    <type>Lookup</type>
</CustomField>