force-app/main/default/objects/Quality_Assurance__c/fields/Prop65_Warning__c.field-meta.xml
<CustomField>
    <fullName>Prop65_Warning__c</fullName>
    <description>“This product can expose you to chemicals such as [name of one or more chemicals] which is [are] known to the State of California to cause cancer, and [name of one or more chemicals] which is [are] known to the State of California to cause birth defects or other reproductive harm. For more information go to www.P65Warnings.ca.gov/product.”</description>
    <label>Prop65 Warning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>