force-app/main/default/objects/Quality_Assurance__c/fields/Qty_Verification__c.field-meta.xml
<CustomField>
    <fullName>Qty_Verification__c</fullName>
    <inlineHelpText>Verify Quantity matches the Picklist Total Qty</inlineHelpText>
    <label>Qty Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>