force-app/main/default/objects/Quality_Assurance__c/fields/Receiving_Line__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Line</label>
    <referenceTo>Receiving_Line__c</referenceTo>
    <relationshipLabel>Quality Assurances</relationshipLabel>
    <relationshipName>Quality_Assurances</relationshipName>
    <type>Lookup</type>
</CustomField>