force-app/main/default/objects/Quality_Assurance__c/fields/Resealable_for_Multi_Servings__c.field-meta.xml
<CustomField>
    <fullName>Resealable_for_Multi_Servings__c</fullName>
    <inlineHelpText>Resealable (for products with multiple uses) – The package can be closed after each use. Example: a lid, adhesive closure, box top closure, etc.</inlineHelpText>
    <label>Resealable for Multiple Uses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>