force-app/main/default/objects/Quality_Assurance__c/fields/Tamper_Evident__c.field-meta.xml
<CustomField>
    <fullName>Tamper_Evident__c</fullName>
    <inlineHelpText>A consumer knows if the package has been opened.Example: a plastic seal, a sticker across the lid that is ripped when opened, a jar with a lid that pops up after opening, etc.</inlineHelpText>
    <label>Tamper Evident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>