force-app/main/default/objects/Quality_Assurance__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <inlineHelpText>The unique tracking number issued through the Track-and-Trace system</inlineHelpText>
    <label>UID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>