force-app/main/default/objects/Quality_Assurance__c/fields/Universal_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Universal_Symbol__c</fullName>
    <inlineHelpText>The California symbol that identifies cannabis and cannabis products: in black, at least 0.5” X 0.5”</inlineHelpText>
    <label>Universal Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Result</valueSetName>
    </valueSet>
</CustomField>