force-app/main/default/objects/Quality_Assurance__c/recordTypes/QA_Batch_Job.recordType-meta.xml
<RecordType>
    <fullName>QA_Batch_Job</fullName>
    <active>true</active>
    <label>QA Batch Job</label>
</RecordType>