force-app/main/default/objects/Quality_Assurance__c/recordTypes/QA_Picklist.recordType-meta.xml
<RecordType>
    <fullName>QA_Picklist</fullName>
    <active>true</active>
    <label>QA Picklist</label>
</RecordType>