force-app/main/default/objects/Quality_Assurance__c/recordTypes/QA_Receiving_Line.recordType-meta.xml
<RecordType>
    <fullName>QA_Receiving_Line</fullName>
    <active>true</active>
    <label>QA Receiving Line</label>
</RecordType>