force-app/main/default/objects/Quality_Assurance__c/validationRules/QA_Record_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Record_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK(Picklist_Line__c) ) ,
  NOT(ISBLANK(Picklist_Line__r.Picklist__c) ) ,
ISPICKVAL(Picklist_Line__r.Picklist__r.Status__c, &apos;QA Review&apos;) = False 
)</errorConditionFormula>
    <errorMessage>Only Picklist in &quot;QA Review&quot; is allowed to create/update Quality Assurance record.</errorMessage>
</ValidationRule>