force-app/main/default/objects/Quality_Assurance__c/listViews/QA_Failures_This_Week.listView-meta.xml
<ListView>
    <fullName>QA_Failures_This_Week</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Failure_Summary__c</columns>
    <columns>Failed_Components__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Failed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>QA Failures This Week</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>