force-app/main/default/objects/Quality_Assurance__c/listViews/X1_QA_Completed_Today.listView-meta.xml
<ListView>
    <fullName>X1_QA_Completed_Today</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>1. QA Completed Today</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>