force-app/main/default/objects/Quality_Assurance__c/listViews/X2_QA_Completed_Yesterday.listView-meta.xml
<ListView>
    <fullName>X2_QA_Completed_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>2. QA Completed Yesterday</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>