force-app/main/default/objects/Quality_Assurance__c/listViews/X3_QA_Completed_This_Week.listView-meta.xml
<ListView>
    <fullName>X3_QA_Completed_This_Week</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>3. QA Completed This Week</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>