force-app/main/default/objects/Quality_Assurance__c/listViews/X4_QA_Completed_This_Month.listView-meta.xml
<ListView>
    <fullName>X4_QA_Completed_This_Month</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>4. QA Completed This Month</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>