force-app/main/default/objects/Quality_Assurance__c/listViews/X5_QA_Completed_Last_Month.listView-meta.xml
<ListView>
    <fullName>X5_QA_Completed_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>5. QA Completed Last Month</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>