force-app/main/default/objects/Quality_Assurance__c/listViews/X6_All_QA_Records.listView-meta.xml
<ListView>
    <fullName>X6_All_QA_Records</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Name__c</columns>
    <columns>Ownership__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Batch_ID__c</columns>
    <columns>UID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Picklist_Line__c</field>
        <operation>contains</operation>
        <value>PKLI</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>6. All QA Records</label>
    <sharedTo>
        <group>Filigreen</group>
    </sharedTo>
</ListView>